--- a/bank.html
+++ b/bank.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- !CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Bank Site</title>
+    <title>Mini-Bank</title>
   </head>
   <body>
     <header>
